# light-gen-subZ

./: LICENSE  README.md  index.html  install.sh  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
docs/: index.html
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  lib.rs  main.rs  models.rs
src-tauri/src/pipeline/: audio_extract.rs  mod.rs  segmentation.rs  subtitle_writer.rs
src-tauri/src/pipeline/stt/: assemblyai.rs  cloud_whisper.rs  deepgram.rs  local_whisper.rs  mod.rs  openai_compatible.rs
src-tauri/src/pipeline/translate/: azure_translate.rs  cloud_deepl.rs  google_translate.rs  languages.rs  local_nllb.rs  mod.rs  nllb_models.rs  openai_translate.rs
